# rust-mini-projects

./: Cargo.toml  README.org
cowsay-web/: Cargo.toml  client.rest
cowsay-web/src/: main.rs
crypto-wallet/: wallet.json
crypto-wallet/src/: main.rs
hn-gui/: Cargo.toml
hn-gui/src/: main.rs
qrcode/: Cargo.toml
qrcode/src/: main.rs
shell/src/: main.rs
