[package]
name = "hn-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
egui_extras = { version = "0.19.0" , features = [ "image" ]}
image = { version = "0.24", default-features = false, features = ["png", ] }
reqwest = { version = "0.11.13" , features = [ "json" ] }
tokio = { version = "1.22.0" , features = [ "full" ] }
tracing-subscriber = "0.3.16"
futures = "0.3.25"
serde = { version = "1.0.147" , features = [ "derive" ] }
chrono = { version = "0.4.23" , features = [ "serde" ] }
open = "3.2.0"

