[package]
name = "qrcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qrcode = "0.12.0"
bardecoder = "0.4.0"
image = { version = "0.24.0" , features = [ "png" ]}
wifi-rs = "0.2.2"
nokhwa = { version = "0.10.0-rc.2" , features = [ "input-native", "output-wgpu"]}

